[package]
name = "termspin"
version = "0.1.0"
edition = "2021"
authors = ["tamasfe"]
categories = ["command-line-interface"]
keywords = ["spinner", "ansi"]
license = "MIT"
description = "A terminal spinner library."
repository = "https://github.com/tamasfe/termspin"

[dependencies]
downcast = "0.11.0"
